objects/SFRelease__Comparison_Report_History__c.object
<CustomObject>
    <fields>
        <fullName>SFRelease__Code_Comparison_Label__c</fullName>
        <label>Code Comparison Label</label>
        <referenceTo>SFRelease__Code_Comparison_Labels__c</referenceTo>
        <relationshipLabel>Comparison Report History</relationshipLabel>
        <relationshipName>Comparison_Report_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFRelease__Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFRelease__Org1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org1</label>
        <referenceTo>SFRelease__Org__c</referenceTo>
        <relationshipLabel>Comparison Report History</relationshipLabel>
        <relationshipName>Comparison_Report_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFRelease__Org2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org2</label>
        <referenceTo>SFRelease__Org__c</referenceTo>
        <relationshipLabel>Comparison Report History (Org2)</relationshipLabel>
        <relationshipName>Comparison_Report_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFRelease__Org3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org3</label>
        <referenceTo>SFRelease__Org__c</referenceTo>
        <relationshipLabel>Comparison Report History (Org3)</relationshipLabel>
        <relationshipName>Comparison_Report_History2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFRelease__Org_1__c</fullName>
        <label>Org 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Org_2__c</fullName>
        <label>Org 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Org_3__c</fullName>
        <label>Org 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Overall_Org1_Coverage__c</fullName>
        <label>Overall Org1 Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SFRelease__Overall_Org2_Coverage__c</fullName>
        <label>Overall Org2 Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SFRelease__Overall_Org3_Coverage__c</fullName>
        <label>Overall Org3 Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SFRelease__PDF__c</fullName>
        <label>PDF</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SFRelease__Report_Last_Run__c</fullName>
        <label>Report Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFRelease__Report_Next_Run__c</fullName>
        <label>Report Next Run</label>
        <type>DateTime</type>
    </fields>
    <label>Comparison Report History</label>
    <listViews>
        <fullName>SFRelease__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Comparison Report History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comparison Report History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>